<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerInfo"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:text="Customer Info"
        android:textColor="#000"
        android:textStyle="bold"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:textColor="#000"
        android:text="Please enter your details" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="15dp"
            android:textColor="#000"
            android:text="@string/full_name"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/fullNameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:textColor="#000"
            android:layout_marginBottom="16dp"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:maxLength="50"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="15dp"
            android:text="@string/city"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/cityET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="16dp"
            android:textColor="#000"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:maxLength="20"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:textColor="#000"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="15dp"
            android:text="@string/country"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/countryET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="16dp"
            android:importantForAutofill="no"
            android:textColor="#000"
            android:inputType="textCapWords"
            android:maxLength="20"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textColor="#000"
            android:layout_marginTop="8dp"
            android:layout_marginRight="15dp"
            android:text="@string/address"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/addressET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="16dp"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:maxLength="20"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textColor="#000"
            android:layout_marginTop="8dp"
            android:layout_marginRight="15dp"
            android:text="@string/postal_code"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/postalCodeET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="16dp"
            android:textColor="#000"
            android:importantForAutofill="no"
            android:inputType="textPostalAddress"
            android:maxLength="6"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textColor="#000"
            android:layout_marginTop="8dp"
            android:layout_marginRight="15dp"
            android:text="@string/email"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:textColor="#000"
            android:layout_marginBottom="16dp"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:maxLength="20"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textColor="#000"
            android:layout_marginTop="8dp"
            android:layout_marginRight="15dp"
            android:text="@string/telephone"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/telephoneET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="16dp"
            android:importantForAutofill="no"
            android:textColor="#000"
            android:inputType="phone"
            android:maxLength="10"
            />
    </LinearLayout>


    <Button
        android:id="@+id/customerInfoSubmitBtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="40dp"
        android:text="Review"
        android:textColor="#fff"
        android:textColorHighlight="#fff"
        android:textColorHint="#fff"
        android:textColorLink="#fff"
        app:cornerRadius="50dp" />


</LinearLayout>
